example/reverse-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
  labels:
    app: echodeployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
        - name: echoserver-container
          image: k8s.gcr.io/echoserver:1.4
          ports:
            - containerPort: 8080
