example/reverse-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: echo-service
spec:
  selector:
    app: echoserver
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 32000
